--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
-    <title>Document</title>
+    <title>????????</title>
 </head>
 <body>
     <div class="main-container">
         <div class="header">
-            <img src="img/img_2.JPG" alt="" width="200px">
+            <img src="images/img-1.jpg" alt="img-1.jpg" width="200px">
             <div class="contacts-container">
                 
                 <h1>Zakhavai Aliaksandr</h1>
