--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
@@ -76,7 +77,7 @@
         <!-- FOOTER -->
         <!-- <address></address> -->
         <footer>
-            <img src="/images/rs_school_js.svg" alt="logo-school" width="100" height="100">
+            <img src="/images/rs_school_js.svg" alt="logo-school" width="50" height="50">
             <div>
                 <a href="https://rs.school/js/">Course «JavaScript/Front-end»</a>
                 <div class="footer-slogan">No Money for pay! Only your patience !</div>
