fix: change link github logo

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <footer>
             <p style="font-size: 10px;">Copyright &copy; 2021</p>
             <div class="footer-logo-github">
-                <img src="/images/github-logo.png" alt="logo-gihub" width="25" height="25">
+                <img src="./images/github-logo.png" alt="logo-gihub" width="25" height="25">
                 <a href="https://github.com/JMSBRN">https://github.com/JMSBRN</a>
             </div>
                 
             
-            <img src="/images/rs_school_js.svg" alt="logo-school" width="50" height="50">
+            <img src="./images/rs_school_js.svg" alt="logo-school" width="50" height="50">
             <div>
                 <a href="https://rs.school/js/">Course «JavaScript/Front-end»</a>
                 <div class="footer-slogan">No Money for pay! Only your patience !</div>
