feat: change text in html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p>Project managment. Complex problem solver.Creative.Innoative.Service-focused.</p>
             
             <h2>languages-</h2>
-             <p>English Intermediate. Polish Speak and understand</p>
+             <p>English Intermediate. Polish Speak and understand.</p>
             <h3>Ready to Relocate </h3>
         </aside>
         <!-- FOOTER -->
