feat: update cv

--- a/index.html
+++ b/index.html
@@ -35,12 +35,9 @@
                         <h5>Country/Town: Belarus / Minsk</h5>
                     </li>
                     <li>
-                        <h3>Skills-</h3>
-                        <div>Project managment. Complex problem solver.Creative.Innoative.Service-focused. Work hard.
-                             <br> Have a degree in Computer Science or similar field.
-                             <br> Be proficient in coding languages such as HTML, CSS, JavaScript, and jQuery.
-                             <br> Understand server-side CSS.
-                             <br> Understand the principles of SEO.
+                        <h3>About me -</h3>
+                        <div>
+                            «I desire to learn and improve skills. I have a passion for technology and change in the digital environment. Desire to create great, simple, clean, efficient code. I likes to keep up to date with latest trends. I has attention to detail and a passion for delivering a great user experience. I can ability to communicate with customer in a clear, concise and courteous manner, both verbally and in writing.»
                         </div>
                     </li>
                     <li>
@@ -56,11 +53,19 @@
                     <p>looking for a job</p>Frontend and full stack Developer
                 </h3>
                 <div> </div>
-                <h3>About Me-</h3>
-                <h4>Six month worked with team on startup (social network). Developing small projects, and learning new
-                    technologies.<br>
-                    Wrote on programming languages including HTML5, CSS, JavaScript, React, Java, MySQL.<br>
-                    looking for any opportunity to be useful and learn new technologies.<br>
+                <h3>Skills-</h3>
+                Experience working with HTML and flexible CSS
+                <br>-Understanding and experience to style and apply design to web pages using CSS
+                <br>-Knowledge of latest open standards such as CSS3 and HTML5
+                <br>-2 years experience developing websites and applications
+                <br>-Experience working with JavaScript
+                <br>-Experience working with React
+                <br>-Experience in solution algorithmic tasks
+                <br>-Experience with a version control system (GIT)
+                <br>-Experience to work within tight deadlines and changing priorities
+                <br>-Excellent communication skills with the ability to effectively interface with all levels and departments on a formal, informal, written, and verbal basis
+                <br>-Self-motivated, goal-oriented, and able to work in a team environment<br>
+                  
                     Learn REACT in progress with <a href="https://rs.school/">RSSChool-EPAM.</a>
                     <h4>Ready to Relocate.</h4>
                     <aside> 
