feat: update cv

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
                 <ul class="contacts" >
                     <h3>Contacts :</h3>
                     <li style="text-decoration: none;">
-                        <h5>Email : <a href="mailto:zakhavai@gmail.com">zakhavai@gmail.com</a></h5>
+                        <p>Email : <a href="mailto:zakhavai@gmail.com">zakhavai@gmail.com</a></p>
                     </li>
                     <li>
-                        <h5>Phone number: <a href="tel:+375336389669"> +375336389669</a></h5>
+                        <p>Phone number: <a href="tel:+375336389669"> +375336389669</a></p>
                     </li>
                     <li>
-                        <h5>LinkedIn:  <a href="https://www.linkedin.com/in/zakhavai-aliaksandr-009bab73/">linkedin.com/in/zakhavai-aliaksandr-009bab73</a>
-                        </h5>
+                        <p>LinkedIn : <a href="https://www.linkedin.com/in/zakhavai-aliaksandr-009bab73/">linkedin.com/in/zakhavai-aliaksandr-009bab73</a>
+                        </p>
                     </li>
                     <li>
-                        <h5><a href="https://github.com/JMSBRN">https://github.com/JMSBRN</a></h5>
+                        <p><a href="https://github.com/JMSBRN">https://github.com/JMSBRN</a></p>
                     </li>
                     <li>
-                        <h5>Country/Town: Belarus / Minsk</h5>
+                        <p>Country/Town: Belarus / Minsk</p>
                     </li>
                     <li>
                         <h3>About me -</h3>
@@ -43,6 +43,13 @@
                     <li>
                         <h3>languages-</h3>
                         <p>English B2. Polish B2.</p>
+                        <ul class="skills-map"> 
+                             <li class="html-li">HTML 60%</li>
+                             <li class="css-li">CSS 65%</li>
+                             <li class="js-li">Javascript 50%</li>
+                             <li class="typescript-li">Typescript 30%</li>
+                             <li class="react-li">React 65%</li>
+                         </ul>
                     </li>
                 </ul>
             </div>
@@ -50,7 +57,7 @@
                 <h1>Zakhavai Aliaksandr</h1>
                 <p>
                 <h3>
-                    <p>looking for a job</p>Frontend and full stack Developer
+                    Frontend and full stack Developer
                 </h3>
                 <div> </div>
                 <h3>Skills-</h3>
@@ -60,13 +67,17 @@
                 <br>-2 years experience developing websites and applications
                 <br>-Experience working with JavaScript
                 <br>-Experience working with React
+                <br>-Experience working with Node.js
+                <br>-Experience working with Webpack
+                <br>-Experience working with MongoDB
+                <br>-Experience working with Heroku
                 <br>-Experience in solution algorithmic tasks
                 <br>-Experience with a version control system (GIT)
                 <br>-Experience to work within tight deadlines and changing priorities
                 <br>-Excellent communication skills with the ability to effectively interface with all levels and departments on a formal, informal, written, and verbal basis
                 <br>-Self-motivated, goal-oriented, and able to work in a team environment<br>
                   
-                    Learn REACT in progress with <a href="https://rs.school/">RSSChool-EPAM.</a>
+                    Learn REACT in progress </a>
                     <h4>Ready to Relocate.</h4>
                     <aside> 
                         <br>
