fix: updated  cv information.

--- a/index.html
+++ b/index.html
@@ -14,22 +14,25 @@
     <div class="main-container">
         <!-- HEADER -->
         <header>
-            <div>
-                <img class="foto-cv" src="images/img-1.jpg" alt="CV-Foto" width="200" height="300">
+            <div class="left-side">
+                <img class="foto-cv" src="images/cv_foto.JPG" alt="cv Foto">
                 <ul class="contacts" >
                     <h3>Contacts :</h3>
-                    <li style="text-decoration: none;">
-                        <p>Email : <a href="mailto:zakhavai@gmail.com">zakhavai@gmail.com</a></p>
-                    </li>
-                    <li>
-                        <p>Phone number: <a href="tel:+375336389669"> +375336389669</a></p>
-                    </li>
                     <li>
                         <p>LinkedIn : <a href="https://www.linkedin.com/in/zakhavai-aliaksandr-009bab73/">linkedin.com/in/zakhavai-aliaksandr-009bab73</a>
                         </p>
                     </li>
                     <li>
-                        <p><a href="https://github.com/JMSBRN">https://github.com/JMSBRN</a></p>
+                        <p>Github: <a href="https://github.com/JMSBRN">https://github.com/JMSBRN</a></p>
+                    </li>
+                    <li style="text-decoration: none;">
+                        <p>Email : <a href="mailto:zakhavai@gmail.com">zakhavai@gmail.com</a></p>
+                    </li>
+                    <li>
+                        <p>Telegram: <a href="https://t.me/jmsbrn"> https://t.me/jmsbrn</a></p>
+                    </li>
+                    <li>
+                        <p>Phone number: <a href="tel:+375336389669"> +375336389669</a></p>
                     </li>
                     <li>
                         <p>Country/Town: Belarus / Minsk</p>
@@ -46,8 +49,8 @@
                         <ul class="skills-map"> 
                              <li class="html-li">HTML 60%</li>
                              <li class="css-li">CSS 65%</li>
-                             <li class="js-li">Javascript 50%</li>
-                             <li class="typescript-li">Typescript 30%</li>
+                             <li class="js-li">Javascript 55%</li>
+                             <li class="typescript-li">Typescript 45%</li>
                              <li class="react-li">React 65%</li>
                          </ul>
                     </li>
@@ -57,24 +60,18 @@
                 <h1>Zakhavai Aliaksandr</h1>
                 <p>
                 <h3>
-                    Frontend and full stack Developer
+                    Frontend Developer (React)
                 </h3>
-                <div> </div>
+                <br>
+                <h4>
+                    certificate: The Rolling Scopes React2022Q3 score: 260, position: 127.
+                </h4>
+                <div></div>
                 <h3>Skills-</h3>
-                Experience working with HTML and flexible CSS
-                <br>-Understanding and experience to style and apply design to web pages using CSS
-                <br>-Knowledge of latest open standards such as CSS3 and HTML5
-                <br>-2 years experience developing websites and applications
-                <br>-Experience working with JavaScript
-                <br>-Experience working with React
-                <br>-Experience working with Node.js
-                <br>-Experience working with Webpack
-                <br>-Experience working with MongoDB
-                <br>-Experience working with Heroku
-                <br>-Experience in solution algorithmic tasks
-                <br>-Experience with a version control system (GIT)
-                <br>-Experience to work within tight deadlines and changing priorities
-                <br>-Excellent communication skills with the ability to effectively interface with all levels and departments on a formal, informal, written, and verbal basis
+                <br>-Experience working with: <br>
+                 JavaScript, React, Node.js, Webpack, MongoDB, Heroku, solution algorithmic tasks, git, styled components, 
+                <br>-work within tight deadlines and changing priorities
+                <br>-communication skills with the ability to effectively interface with all levels and departments on a formal, informal, written, and verbal basis
                 <br>-Self-motivated, goal-oriented, and able to work in a team environment<br>
                   
                     Learn REACT in progress </a>
@@ -82,6 +79,11 @@
                     <aside> 
                         <br>
                         <ul class="experience">
+                            <h2>Experience</h2>
+                            <li>
+                                <h4>2021-2022</h4>
+                                <div>Internship in a small freelance project as frontend and backend developer</div>
+                            </li>
                             <h2>Experience</h2>
                             <li>
                                 <h4>2017-2021</h4>
@@ -96,6 +98,10 @@
                                 <div>FOC Kamako, Director of Sales Department.</div>
                             </li>
                             <h2>Education</h2>
+                            <li>
+                                <h4>2021-2022</h4>
+                                <div> The Rolling Scopes</div>
+                            </li>
                             <li>
                                 <h4>2018-2018</h4>
                                 <div>Training Tachnologies Center.Java Standart Edition.</div>
