fix: update information

--- a/index.html
+++ b/index.html
@@ -68,23 +68,18 @@
                 </h4>
                 <div></div>
                 <h3>Skills-</h3>
-                <br>-Experience working with: <br>
-                 JavaScript, React, Node.js, Webpack, MongoDB, Heroku, solution algorithmic tasks, git, styled components, 
-                <br>-work within tight deadlines and changing priorities
-                <br>-communication skills with the ability to effectively interface with all levels and departments on a formal, informal, written, and verbal basis
-                <br>-Self-motivated, goal-oriented, and able to work in a team environment<br>
-                  
-                    Learn REACT in progress </a>
-                    <h4>Ready to Relocate.</h4>
+                Experience working with:
+                <spam class="technologies">TypeScript, JavaScript, React, Redux Toolkit, Redux, Node, Webpack, MongoDB, Heroku, Git, Styled Components</spam>, 
+                also work within tight deadlines and changing priorities
+                communication skills with the ability to effectively interface with all levels and departments on a formal, informal, written, and verbal basis
+                Self-motivated, goal-oriented, and able to work in a team environment  
                     <aside> 
-                        <br>
                         <ul class="experience">
                             <h2>Experience</h2>
                             <li>
                                 <h4>2021-2022</h4>
                                 <div>Internship in a small freelance project as frontend and backend developer</div>
                             </li>
-                            <h2>Experience</h2>
                             <li>
                                 <h4>2017-2021</h4>
                                 <div>LLC Golden-Hill, Owner.</div>
