--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                         <p>Country/Town: Belarus / Minsk</p>
                     </li>
                     <li>
-                        <h3>About me -</h3>
-                        <div>
-                            «I desire to learn and improve skills. I have a passion for technology and change in the digital environment. Desire to create great, simple, clean, efficient code. I likes to keep up to date with latest trends. I has attention to detail and a passion for delivering a great user experience. I can ability to communicate with customer in a clear, concise and courteous manner, both verbally and in writing.»
+                        <h3>About me : </h3>
+                        <div class="about-me">
+                            I desire to learn and improve skills. I have a passion for technology and change in the digital environment. Desire to create great, simple, clean, efficient code. I likes to keep up to date with latest trends. I has attention to detail and a passion for delivering a great user experience. I can ability to communicate with customer in a clear, concise and courteous manner, both verbally and in writing.
                         </div>
                     </li>
                     <li>
